# PagedKV-Fusion-Custom-CUDA-Kernels-for-KV-Cache-Eviction-Quantized-Paged-Attention

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_downstream_proxy.py  bench_eviction.py  bench_quant_attention.py
csrc/: bindings.cpp  eviction_score.cu  quant_paged_attention.cu
docker/: Dockerfile.cuda
docs/: VALIDATION_REPORT.md  VLLM_INTEGRATION.md
integration/vllm/: pagedkv_fusion_backend.py  patch_vllm.py
pagedkv_fusion/: __init__.py  ops.py  quantize.py  reference.py  testing_utils.py
results/: README.md  downstream_proxy_cpu.json  eviction_bench_cpu_sections.json  eviction_bench_gpu_sections.json  quant_bench_cpu_sections.json  quant_bench_gpu_sections.json
scripts/: profile_kernels.py  run_end_to_end_demo.py
tests/: conftest.py  test_eviction.py  test_kernels_gpu.py  test_paged_attention.py  test_quantization.py
